--- a/assets/views/index.html
+++ b/assets/views/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Measure</title>
+        <title>Glucose measure converter</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, viewport-fit=cover" />
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+        
+        <link href="/splashscreen/iphone5_splash.<%= htmlWebpackPlugin.options.rev %>.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+        <link href="/splashscreen/iphone6_splash.<%= htmlWebpackPlugin.options.rev %>.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+        <link href="/splashscreen/iphoneplus_splash.<%= htmlWebpackPlugin.options.rev %>.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+        <link href="/splashscreen/iphonex_splash.<%= htmlWebpackPlugin.options.rev %>.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+        <link href="/splashscreen/iphonexr_splash.<%= htmlWebpackPlugin.options.rev %>.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+        <link href="/splashscreen/iphonexsmax_splash.<%= htmlWebpackPlugin.options.rev %>.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+        <link href="/splashscreen/ipad_splash.<%= htmlWebpackPlugin.options.rev %>.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+        <link href="/splashscreen/ipadpro1_splash.<%= htmlWebpackPlugin.options.rev %>.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+        <link href="/splashscreen/ipadpro3_splash.<%= htmlWebpackPlugin.options.rev %>.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+        <link href="/splashscreen/ipadpro2_splash.<%= htmlWebpackPlugin.options.rev %>.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     </head>
 
     <body>
