--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -1,6 +1,10 @@
 html {
     font-family: Roboto, Arial, Helvetica, sans-serif;
     color: #FFF;
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: 400;
+
+    @media (min-width: 650px) {
+        font-size: 2em;   
+    }
 }
