--- a/src/components/styles/converter.scss
+++ b/src/components/styles/converter.scss
@@ -12,7 +12,7 @@
         transform: translate(-50%, -50%);
         position: fixed;
         z-index: 1;
-        animation: settings-in .75s .85s backwards;
+        animation: settings-in .75s 1.25s backwards ease;
 
         &__reverse {
             font-size: 3em;
@@ -103,7 +103,7 @@
 
 @keyframes settings-in {
     from {
-        transform: translate(-50%, -55%); 
+        transform: translate(-50%, -65%); 
         opacity: 0;
     }
     to {
