--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -1,6 +1,6 @@
 html {
     font-family: Roboto, Arial, Helvetica, sans-serif;
-    color: #FFF;
+    color: #111;
     font-size: 1.5em;
     font-weight: 400;
 
