--- a/assets/views/index.html
+++ b/assets/views/index.html
@@ -4,6 +4,7 @@
         <title>Glucose measure converter</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, viewport-fit=cover" />
+        <meta name="description" content="Convert between mmol/L and mg/dL.">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
         
         <link href="/splashscreens/iphone5_splash.<%= htmlWebpackPlugin.options.rev %>.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
