--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -11,7 +11,7 @@
     list-style: none; 
     background-color: transparent;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
-    -webkit-appearance: none; 
+    appearance: none; 
 } 
 
 html {
