--- a/src/components/styles/converter.scss
+++ b/src/components/styles/converter.scss
@@ -22,87 +22,11 @@
         }
     }
 
-    &__section {
-        height: 50%;
-        display: flex;
-        text-align: center;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        &--default {
-            background-color: var(--color-blue);
-            animation: section-default-in both .35s .2s;
-        }
-
-        &--other {
-            background-color: var(--color-green);
-            animation: section-other-in both .35s .4s;
-        }
-
-        &--inited {
-            animation-delay: 0s;
-        }
-
-        &__input-wrapper {
-            margin-bottom: .35em;
-            max-width: 11em;
-            overflow: hidden;
-            display: block;
-
-            &__input {
-                width: 100%;
-                letter-spacing: -.0251em;
-                text-align: center;
-                font-size: 4.65em;
-                height: 1em;
-                font-weight: 500; 
-
-                &:disabled {
-                    opacity: 1;
-                }
-            }
-        }
-
-        &__unit {
-            text-transform: uppercase;
-            opacity: .6;
-            font-size: .9em;
-        }
+    &__elements {
+       height: 100%;
     }
 }
-
-
-@keyframes section-default-in {
-    from {
-        transform: translateX(-2em);
-        padding-right: 2em;
-        margin-right: -2em;
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-        padding-right: 0;
-        margin-right: 0;
-    }
-}
-
-@keyframes section-other-in {
-    from {
-        transform: translateX(2em);
-        padding-left: 2em;
-        margin-left: -2em;
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        padding-left: 0;
-        margin-left: 0;
-        opacity: 1;
-    }
-}
-
+ 
 @keyframes settings-in {
     from {
         transform: translate(-50%, -65%); 
