--- a/assets/views/index.html
+++ b/assets/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Blood glucose unit converterr</title>
+        <title>Blood glucose unit converter</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover" />
         <meta name="description" content="Convert between mmol/L and mg/dL.">
